Adjusted Recent Comments

--- a/404.html
+++ b/404.html
@@ -96,6 +96,13 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-sm-12">
+                    <div class="ft-logo-holder">
+                        <span class="signature">Vila Nova Conceição, São Paulo - SP | Centro, Rio de Janeiro - RJ</span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
               <div class="col-sm-12">
                   <nav class="footer-nav">
                       <a href="standard.html" class="link subtle-l">Comece Agora</a>
@@ -116,8 +123,13 @@
               </div>
           </div>
           <div class="row">
+            <div class="col-sm-12">
+                <span class="signature">Caso queira entrar em contato conosco, envie um e-mail para contato@qgx.digital ou pelo nosso telefone (21) 3549-9987.</span>
+            </div>
+        </div>
+          <div class="row">
               <div class="col-sm-12">
-                  <span class="signature">© QGX 2020 - Todos os direitos reservados</span>
+                  <span class="signature">© QGX PAGAMENTOS LTDA 2020 - CNPJ: 35.813.685/0001-70 - Todos os direitos reservados</span>
               </div>
           </div>
         </div>
