--- a/advanced.html
+++ b/advanced.html
@@ -58,7 +58,7 @@
             <div class="row align-items-end">
                 <div class="col">
                     <div class="hero-content">
-                        <h1 class="heading lg white">Selecione seu plano</h1>
+                        <h1 class="heading md white">Selecione seu plano</h1>
                         <p class="caption lg subtle-w">Selecione um plano e comece a sua revolução financeira.</p>
                     </div>
                 </div>
@@ -82,11 +82,13 @@
                 <div class="col-md-7 col-sm-12">
                     <div class="plan-title">
                         <h2 class="heading white xmd">Comece com o plano Advanced</h2>
-                        <p class="caption white w-bd">Até 1.000 contas de usuários ativas.</p>
+                        <p class="caption subtle-w w-bd">Uma evolução do Plano Standard. Passo ideal para incluir seus novos parceiros, novos fornecedores e começar a aceleração do seu negócio.</p>
                     </div>
                     <div class="plan-extras">
-                        <h3 class="heading sm white">Esse plano é para minha empresa?</h3>
-                        <p class="caption md subtle-w">Ideal para médias e grandes empresas que já estão em um momento mais avançado.</p>
+                        <h3 class="heading sm white">Plano ideal para:</h3>
+                        <p class="caption md subtle-w">- Fraqueadores que visam reduzir a inadimplência nos royalties e nas taxas de marketing.</p>
+                        <p class="caption md subtle-w">- Empresas de varejo e redes de restaurante.</p>
+                        <p class="caption md subtle-w">- Passo inicial para rede de escolas, uniões estudantis (atléticas) e Universidades.</p>
                     </div>
                     <div class="features-list">
                         <span class="plan-item">
@@ -298,7 +300,7 @@
                     <div class="plan-card featured">
                         <div class="card-header">
                             <h5 class="heading md white">Enterprise</h5>
-                            <h6 class="heading sm white">Sob Consulta</h6>
+                            <h6 class="heading sm white">R$ 10.000 / Mês</h6>
                             <p class="caption md subtle-w">Contas Ilimitadas</p>
                         </div>
                         <div class="card-content">
@@ -384,12 +386,21 @@
 
       <!-- Footer -->
 
+    <!-- Footer -->
+
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
                     <div class="ft-logo-holder">
                         <img src="img/subtle-logo.svg">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="ft-logo-holder">
+                        <span class="signature">Vila Nova Conceição, São Paulo - SP | Centro, Rio de Janeiro - RJ</span>
                     </div>
                 </div>
             </div>
@@ -414,8 +425,13 @@
               </div>
           </div>
           <div class="row">
+            <div class="col-sm-12">
+                <span class="signature">Caso queira entrar em contato conosco, envie um e-mail para contato@qgx.digital ou pelo nosso telefone (21) 3549-9987.</span>
+            </div>
+        </div>
+          <div class="row">
               <div class="col-sm-12">
-                  <span class="signature">© QGX 2020 - Todos os direitos reservados</span>
+                  <span class="signature">© QGX PAGAMENTOS LTDA 2020 - CNPJ: 35.813.685/0001-70 - Todos os direitos reservados</span>
               </div>
           </div>
         </div>
