--- a/como-monetizar.html
+++ b/como-monetizar.html
@@ -352,7 +352,7 @@
                     <div class="plan-card featured">
                         <div class="card-header">
                             <h5 class="heading md white">Enterprise</h5>
-                            <h6 class="heading sm white">Sob Consulta</h6>
+                            <h6 class="heading sm white">R$ 10.000 / Mês</h6>
                             <p class="caption md subtle-w">Contas Ilimitadas</p>
                         </div>
                         <div class="card-content">
@@ -438,12 +438,21 @@
 
       <!-- Footer -->
 
+    <!-- Footer -->
+
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
                     <div class="ft-logo-holder">
                         <img src="img/subtle-logo.svg">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="ft-logo-holder">
+                        <span class="signature">Vila Nova Conceição, São Paulo - SP | Centro, Rio de Janeiro - RJ</span>
                     </div>
                 </div>
             </div>
@@ -468,8 +477,13 @@
               </div>
           </div>
           <div class="row">
+            <div class="col-sm-12">
+                <span class="signature">Caso queira entrar em contato conosco, envie um e-mail para contato@qgx.digital ou pelo nosso telefone (21) 3549-9987.</span>
+            </div>
+        </div>
+          <div class="row">
               <div class="col-sm-12">
-                  <span class="signature">© QGX 2020 - Todos os direitos reservados</span>
+                  <span class="signature">© QGX PAGAMENTOS LTDA 2020 - CNPJ: 35.813.685/0001-70 - Todos os direitos reservados</span>
               </div>
           </div>
         </div>
