--- a/enterprise.html
+++ b/enterprise.html
@@ -58,7 +58,7 @@
             <div class="row align-items-end">
                 <div class="col">
                     <div class="hero-content">
-                        <h1 class="heading lg white">Selecione seu plano</h1>
+                        <h1 class="heading md white">Selecione seu plano</h1>
                         <p class="caption lg subtle-w">Selecione um plano e comece a sua revolução financeira.</p>
                     </div>
                 </div>
@@ -82,11 +82,14 @@
                 <div class="col-md-7 col-sm-12">
                     <div class="plan-title">
                         <h2 class="heading white xmd">Comece com o plano Enterprise</h2>
-                        <p class="caption white w-bd">Contas Ilimitadas</p>
+                        <p class="caption subtle-w w-bd">Plano mais que completo! Ideal para a empresa que já decidiu seu plano de negócio e deseja todos os recursos para desenvolver as suas soluções financeiras.</p>
                     </div>
                     <div class="plan-extras">
-                        <h3 class="heading sm white">Esse plano é para minha empresa?</h3>
-                        <p class="caption md subtle-w">O plano enterprise é cuidadosamente customizado para sua empresa.</p>
+                        <h3 class="heading sm white">Plano ideal para:</h3>
+                        <p class="caption md subtle-w">- Redes de Varejo com grande capilaridade no mercado.</p>
+                        <p class="caption md subtle-w">- Grupos religiosos e congregações com expressiva quantidade de colaboradores.</p>
+                        <p class="caption md subtle-w">- Grandes empresas com relevância no mercado e com mais de mil funcionários.</p>
+                        <p class="caption md subtle-w">- Clubes de vantagens que desejam oferecer mais facilidades para seus associados e parceiros.</p>
                     </div>
                     <div class="features-list">
                         <span class="plan-item">
@@ -116,7 +119,7 @@
                 </div>
                 <div class="col-md-5 col-sm-12">
                     <div class="pricing">
-                        <h3 class="price">Sob Consulta</h3>
+                        <h3 class="price">R$ 10.000 / Mês</h3>
                         <span class="caption xmd subtle-w">Qualidade superior e menor preço do mercado. <i class="icon icon-check positive"></i></span>
                         <span class="caption xmd subtle-w">Cancele quando quiser <i class="icon icon-check positive"></i></span>
                         <div class="action-holder">
@@ -301,7 +304,7 @@
                 <div class="plan-card featured">
                     <div class="card-header">
                         <h5 class="heading md white">Enterprise</h5>
-                        <h6 class="heading sm white">Sob Consulta</h6>
+                        <h6 class="heading sm white">R$ 10.000 / Mês</h6>
                         <p class="caption md subtle-w">Contas Ilimitadas</p>
                     </div>
                     <div class="card-content">
@@ -385,7 +388,7 @@
    </div>
  </section>
 
-      <!-- Footer -->
+     <!-- Footer -->
 
     <footer>
         <div class="container">
@@ -393,6 +396,13 @@
                 <div class="col-sm-12">
                     <div class="ft-logo-holder">
                         <img src="img/subtle-logo.svg">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="ft-logo-holder">
+                        <span class="signature">Vila Nova Conceição, São Paulo - SP | Centro, Rio de Janeiro - RJ</span>
                     </div>
                 </div>
             </div>
@@ -417,8 +427,13 @@
               </div>
           </div>
           <div class="row">
+            <div class="col-sm-12">
+                <span class="signature">Caso queira entrar em contato conosco, envie um e-mail para contato@qgx.digital ou pelo nosso telefone (21) 3549-9987.</span>
+            </div>
+        </div>
+          <div class="row">
               <div class="col-sm-12">
-                  <span class="signature">© QGX 2020 - Todos os direitos reservados</span>
+                  <span class="signature">© QGX PAGAMENTOS LTDA 2020 - CNPJ: 35.813.685/0001-70 - Todos os direitos reservados</span>
               </div>
           </div>
         </div>
