--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="main-hero-container">
             <div class="hero-content">
                 <div class="featured-asset float-effect delay">
-                    <img src="img/asset-phones.svg" />
+                    <img src="img/asset-phones.png" />
                 </div>
                 <h1 class="heading lg white">Comece o seu próprio banco digital!</h1>
                 <p class="caption lg subtle-w">Criar um banco digital é bem mais simples do que você imagina. <b>Seja uma fintech, sem mudar quem você é.</b></p>
@@ -117,7 +117,7 @@
                       </div>
                       <div class="content-holder">
                           <h3 class="heading sm dark">Democratização do sistema financeiro</h3>
-                          <p class="caption md subtle">Ganhe o controle das transações financeiras de toda a sua empresa. Com a QGX, você tem o controle sobre as suas taxas,  históricos de movimentações e muito mais.</p>
+                          <p class="caption md subtle">Chegou a hora de mudar o seu conceito sobre banco. Torne-se independente dos grandes bancos. Ganhe o controle das transações financeiras de toda a sua empresa. Com a QGX, você tem o controle sobre as suas taxas, históricos de movimentações e muito mais.</p>
                           <a href="standard.html" class="link neutral-link">Comece Agora</a>
                       </div>
                   </div>
@@ -472,7 +472,7 @@
                     <div class="plan-card featured">
                         <div class="card-header">
                             <h5 class="heading md white">Enterprise</h5>
-                            <h6 class="heading sm white">Sob Consulta</h6>
+                            <h6 class="heading sm white">R$ 10.000 / Mês</h6>
                             <p class="caption md subtle-w">Contas Ilimitadas</p>
                         </div>
                         <div class="card-content">
@@ -567,6 +567,13 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-sm-12">
+                    <div class="ft-logo-holder">
+                        <span class="signature">Vila Nova Conceição, São Paulo - SP | Centro, Rio de Janeiro - RJ</span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
               <div class="col-sm-12">
                   <nav class="footer-nav">
                       <a href="standard.html" class="link subtle-l">Comece Agora</a>
@@ -587,8 +594,13 @@
               </div>
           </div>
           <div class="row">
+            <div class="col-sm-12">
+                <span class="signature">Caso queira entrar em contato conosco, envie um e-mail para contato@qgx.digital ou pelo nosso telefone (21) 3549-9987.</span>
+            </div>
+        </div>
+          <div class="row">
               <div class="col-sm-12">
-                  <span class="signature">© QGX 2020 - Todos os direitos reservados</span>
+                  <span class="signature">© QGX PAGAMENTOS LTDA 2020 - CNPJ: 35.813.685/0001-70 - Todos os direitos reservados</span>
               </div>
           </div>
         </div>
