--- a/standard.html
+++ b/standard.html
@@ -58,7 +58,7 @@
             <div class="row align-items-end">
                 <div class="col">
                     <div class="hero-content">
-                        <h1 class="heading lg white">Selecione seu plano</h1>
+                        <h1 class="heading md white">Selecione seu plano</h1>
                         <p class="caption lg subtle-w">Selecione um plano e comece a sua revolução financeira.</p>
                     </div>
                 </div>
@@ -82,11 +82,14 @@
                 <div class="col-md-7 col-sm-12">
                     <div class="plan-title">
                         <h2 class="heading white xmd">Comece com o plano standard</h2>
-                        <p class="caption white w-bd">Até 500 contas de usuários ativas.</p>
+                        <p class="caption subtle-w w-bd">Recupere 5% a 20% do seu faturamento que hoje vai para o seu banco convencional através de tarifas, taxas, adiantamento de salários e de recebíveis, etc. Com o Plano Standard você pode reduzir seus custos e passar a monetizar sobre essas movimentações financeiras e muito mais.</p>
                     </div>
                     <div class="plan-extras">
-                        <h3 class="heading sm white">Esse plano é para minha empresa?</h3>
-                        <p class="caption md subtle-w">Ideal para pequenas e médias empresas que querem começar a testar esse novo modelo.</p>
+                        <h3 class="heading sm white">Plano ideal para:</h3>
+                        <p class="caption md subtle-w">- Empresas e empreendedores que desejam testar e validar sua operação com um modelo simples e de baixo custo.</p>
+                        <p class="caption md subtle-w">- Primeiro passo para grupos religiosos e movimentos sociais.</p>
+                        <p class="caption md subtle-w">- Pequenas e médias empresas que buscam redução dos custos financeiros e não recebem a devida atenção com os grandes bancos.</p>
+                        <p class="caption md subtle-w">- Até 500 contas de usuários ativas.</p>
                     </div>
                     <div class="features-list">
                         <span class="plan-item">
@@ -294,7 +297,7 @@
                     <div class="plan-card featured">
                         <div class="card-header">
                             <h5 class="heading md white">Enterprise</h5>
-                            <h6 class="heading sm white">Sob Consulta</h6>
+                            <h6 class="heading sm white">R$ 10.000 / Mês</h6>
                             <p class="caption md subtle-w">Contas Ilimitadas</p>
                         </div>
                         <div class="card-content">
@@ -378,7 +381,7 @@
        </div>
      </section>
 
-      <!-- Footer -->
+     <!-- Footer -->
 
     <footer>
         <div class="container">
@@ -386,6 +389,13 @@
                 <div class="col-sm-12">
                     <div class="ft-logo-holder">
                         <img src="img/subtle-logo.svg">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="ft-logo-holder">
+                        <span class="signature">Vila Nova Conceição, São Paulo - SP | Centro, Rio de Janeiro - RJ</span>
                     </div>
                 </div>
             </div>
@@ -410,8 +420,13 @@
               </div>
           </div>
           <div class="row">
+            <div class="col-sm-12">
+                <span class="signature">Caso queira entrar em contato conosco, envie um e-mail para contato@qgx.digital ou pelo nosso telefone (21) 3549-9987.</span>
+            </div>
+        </div>
+          <div class="row">
               <div class="col-sm-12">
-                  <span class="signature">© QGX 2020 - Todos os direitos reservados</span>
+                  <span class="signature">© QGX PAGAMENTOS LTDA 2020 - CNPJ: 35.813.685/0001-70 - Todos os direitos reservados</span>
               </div>
           </div>
         </div>
