Adjusted Plans content

--- a/standard.html
+++ b/standard.html
@@ -81,7 +81,7 @@
             <div class="row">
                 <div class="col-md-7 col-sm-12">
                     <div class="plan-title">
-                        <h2 class="heading white xmd">Comece com o plano standard</h2>
+                        <h2 class="heading white xmd">Comece com o plano Standard</h2>
                         <p class="caption subtle-w w-bd">Recupere 5% a 20% do seu faturamento que hoje vai para o seu banco convencional através de tarifas, taxas, adiantamento de salários e de recebíveis, etc. Com o Plano Standard você pode reduzir seus custos e passar a monetizar sobre essas movimentações financeiras e muito mais.</p>
                     </div>
                     <div class="plan-extras">
