--- a/enterprise.html
+++ b/enterprise.html
@@ -119,7 +119,8 @@
                 </div>
                 <div class="col-md-5 col-sm-12">
                     <div class="pricing">
-                        <h3 class="price">R$ 10.000 / Mês</h3>
+                        <h3 class="price">R$ 10.000</h3>
+                        <span class="white caption sm">por mês</span>
                         <span class="caption xmd subtle-w">Qualidade superior e menor preço do mercado. <i class="icon icon-check positive"></i></span>
                         <span class="caption xmd subtle-w">Cancele quando quiser <i class="icon icon-check positive"></i></span>
                         <div class="action-holder">
