--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -172,7 +172,8 @@
     </section>
 
 
-     <!-- Footer -->
+     
+      <!-- Footer -->
 
     <footer>
         <div class="container">
@@ -185,16 +186,14 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <div class="ft-logo-holder">
-                        <span class="signature">Vila Nova Conceição, São Paulo - SP | Centro, Rio de Janeiro - RJ</span>
-                    </div>
+                    <span class="signature">Vila Nova Conceição, São Paulo - SP | Centro, Rio de Janeiro - RJ</span>
+                    <span class="signature">Caso queira entrar em contato conosco, envie um e-mail para contato@qgx.digital ou pelo nosso telefone (21) 3549-9987.</span>
                 </div>
             </div>
             <div class="row">
               <div class="col-sm-12">
                   <nav class="footer-nav">
                       <a href="standard.html" class="link subtle-l">Comece Agora</a>
-                      <a href="entrar.html" class="link subtle-l">Entrar</a>
                       <a href="politica-de-privacidade.html" class="link subtle-l">Políticas de Privacidade</a>
                       <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
                       <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
@@ -211,13 +210,8 @@
               </div>
           </div>
           <div class="row">
-            <div class="col-sm-12">
-                <span class="signature">Caso queira entrar em contato conosco, envie um e-mail para contato@qgx.digital ou pelo nosso telefone (21) 3549-9987.</span>
-            </div>
-        </div>
-          <div class="row">
               <div class="col-sm-12">
-                  <span class="signature">© QGX PAGAMENTOS LTDA 2020 - CNPJ: 35.813.685/0001-70 - Todos os direitos reservados</span>
+                  <span class="signature">© QGX PAGAMENTOS LTDA - CNPJ: 35.813.685/0001-70 - Todos os direitos reservados</span>
               </div>
           </div>
         </div>
@@ -242,10 +236,8 @@
                       <div class="col">
                           <nav class="mob-nav">
                               <a href="/" class="link white">Home</a>
-                              <a href="como-monetizar.html" class="link white">Como monetizar</a>
                               <a href="standard.html" class="link white">Planos</a>
                               <a href="entrar.html" class="link white">Entrar</a>
-                              <a href="standard.html" class="link primary-link">Começar Agora</a>
                           </nav>
                           <nav class="mob-social-nav">
                               <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link white"><i class="icon icon-facebook"></i> Facebook</a>
