--- a/criar-conta.html
+++ b/criar-conta.html
@@ -196,7 +196,7 @@
                       <a href="standard.html" class="link subtle-l">Comece Agora</a>
                       <a href="politica-de-privacidade.html" class="link subtle-l">Políticas de Privacidade</a>
                       <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
-                      <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
+                      <a target="_blank" href="/politica-de-compliance.html" class="link subtle-l">Política de Compliance</a>
                   </nav>
               </div>
           </div>
@@ -218,40 +218,40 @@
     </footer>
 
     <!-- Modal -->
-      <div class="modal fade" id="menuModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-          <div class="modal-content menu">
-              <div class="container">
-                  <div class="row">
-                      <div class="col col-md-4">
-                          <a href="/" class="main-logo"><img src="img/subtle-logo.svg"></a>
-                      </div>
-                      <div class="col col-md-8">
-                         <nav class="main-nav mob">
-                          <a href="#" class="menu-link close-link" data-dismiss="modal" aria-label="Close"><i class="icon icon-close"></i></a>
-                         </nav>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col">
-                          <nav class="mob-nav">
-                              <a href="/" class="link white">Home</a>
-                              <a href="standard.html" class="link white">Planos</a>
-                              <a href="entrar.html" class="link white">Entrar</a>
-                          </nav>
-                          <nav class="mob-social-nav">
-                              <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link white"><i class="icon icon-facebook"></i> Facebook</a>
-                              <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link white"><i class="icon icon-instagram"></i> Instagram</a>
-                              <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link white"><i class="icon icon-linkedin"></i> LinkedIn</a>
-                          </nav>
-                      </div>
-                  </div>
-              </div>
+    <div class="modal fade" id="menuModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+        <div class="modal-content menu">
+            <div class="container">
+                <div class="row">
+                    <div class="col col-md-4">
+                        <a href="/" class="main-logo"><img src="img/subtle-logo.svg"></a>
+                    </div>
+                    <div class="col col-md-8">
+                       <nav class="main-nav mob">
+                        <a href="#" class="menu-link close-link" data-dismiss="modal" aria-label="Close"><i class="icon icon-close"></i></a>
+                       </nav>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <nav class="mob-nav">
+                            <a href="/" class="link white">Home</a>
+                            <a href="standard.html" class="link white">Planos</a>
+                            <a href="entrar.html" class="link white">Entrar</a>
+                        </nav>
+                        <nav class="mob-social-nav">
+                            <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link white"><i class="icon icon-facebook"></i> Facebook</a>
+                            <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link white"><i class="icon icon-instagram"></i> Instagram</a>
+                            <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link white"><i class="icon icon-linkedin"></i> LinkedIn</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
 
-          </div>
-          </div>
-          </div>
-      </div>
+        </div>
+        </div>
+        </div>
+    </div>
 
         
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
