--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                       <a href="standard.html" class="link subtle-l">Comece Agora</a>
                       <a href="politica-de-privacidade.html" class="link subtle-l">Políticas de Privacidade</a>
                       <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
-                      <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
+                      <a target="_blank" href="/politica-de-compliance.html" class="link subtle-l">Política de Compliance</a>
                   </nav>
               </div>
           </div>
